Updated rod.  Still needs work.  Started waypoint loading.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,3 +294,9 @@ target_link_libraries(controller_linear
   ${catkin_LIBRARIES}
   plane_camera_magnet
 )
+
+add_executable(datrack_smcorod src/datrack_smcorod.cpp)
+target_link_libraries(datrack_smcorod
+  ${catkin_LIBRARIES}
+  plane_camera_magnet
+)
